ops/api-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: api
  name: api
spec:
  ports:
    - port: 80
      name: service
      targetPort: service
      protocol: TCP
  selector:
    app: api
