ops/webapp-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: webapp
  name: webapp
spec:
  ports:
    - port: 80
      name: service
      targetPort: service
      protocol: TCP
  selector:
    app: webapp
